Error Mitigation/MagiCoder/Data/org_ietf_jgss/org_ietf_jgssOutputResult.txt
Sample: Oid_1
----------------------------------------------------------------
output:
./Data/org_ietf_jgss/javaFiles/Oid_1.java:5: error: unreported exception GSSException; must be caught or declared to be thrown
        Oid oid1 = new Oid("1.2.3.4");
                   ^
./Data/org_ietf_jgss/javaFiles/Oid_1.java:6: error: unreported exception GSSException; must be caught or declared to be thrown
        Oid oid2 = new Oid("1.2.3.4");
                   ^
./Data/org_ietf_jgss/javaFiles/Oid_1.java:7: error: unreported exception GSSException; must be caught or declared to be thrown
        Oid oid3 = new Oid("5.6.7.8");
                   ^
3 errors


================================================================

Sample: Oid_2
----------------------------------------------------------------
output:
./Data/org_ietf_jgss/javaFiles/Oid_2.java:5: error: unreported exception GSSException; must be caught or declared to be thrown
        Oid oid = new Oid("1.2.3.4");
                  ^
1 error


================================================================

Sample: Oid_5
----------------------------------------------------------------
output:
./Data/org_ietf_jgss/javaFiles/Oid_5.java:5: error: no suitable constructor found for Oid(int[])
        Oid oid = new Oid(new int[] {1, 2, 3, 4, 5});
                  ^
    constructor Oid.Oid(String) is not applicable
      (argument mismatch; int[] cannot be converted to String)
    constructor Oid.Oid(InputStream) is not applicable
      (argument mismatch; int[] cannot be converted to InputStream)
    constructor Oid.Oid(byte[]) is not applicable
      (argument mismatch; int[] cannot be converted to byte[])
1 error


================================================================

